--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   },
   "author": "Ciro S. Costa <ciro9758@gmail.com> (http://www.cirocosta.com.br/)",
   "license": "MIT",
-  "bin": {
-    "poliglota": "poliglota"
-  },
   "directories": {
-    "test": "test"
+    "test": "test",
+    "bin": "./bin"
   },
   "repository": {
     "type": "git",
