--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   },
   "homepage": "https://github.com/cirocosta/poliglota",
   "dependencies": {
+    "browser-request": "^0.3.1",
     "commander": "^2.2.0",
     "q": "^1.0.1",
     "request": "^2.36.0"
   },
   "devDependencies": {
-    "mocha": "^1.19.0"
+    "gulp": "^3.7.0",
+    "gulp-browserify": "^0.5.0",
+    "gulp-jshint": "^1.6.1",
+    "gulp-mocha": "^0.4.1",
+    "gulp-uglify": "^0.3.0",
+    "rimraf": "^2.2.8"
   }
 }
