--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/cirocosta/poliglota",
   "dependencies": {
-    "browser-request": "^0.3.1",
     "commander": "^2.2.0",
+    "http-browserify": "^1.3.2",
     "q": "^1.0.1",
     "request": "^2.36.0"
   },
