--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-jshint": "^1.6.1",
     "gulp-mocha": "^0.4.1",
     "gulp-uglify": "^0.3.0",
-    "rimraf": "^2.2.8"
+    "rimraf": "^2.2.8",
+    "sinon": "^1.10.1"
   }
 }
