--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "poliglota",
   "main": "dist/poliglota.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/cirocosta/poliglota",
   "description": "Translates a given text",
   "authors": [
@@ -22,6 +22,7 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "example"
   ]
 }
