--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Translates a given text",
   "main": "src/poliglota.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "gulp test"
   },
   "author": "Ciro S. Costa <ciro9758@gmail.com> (http://www.cirocosta.com.br/)",
   "license": "MIT",
